--- a/_includes/masthead-fr.html
+++ b/_includes/masthead-fr.html
@@ -6,7 +6,7 @@
       <nav id="site-nav" class="greedy-nav">
         <button><div class="navicon"></div></button>
         <ul class="visible-links">
-          <li class="masthead__menu-item masthead__menu-item--lg persist"><a href="{{ base_path }}/">{{ site.title }}</a></li>
+          <li class="masthead__menu-item masthead__menu-item--lg persist"><a href="{{ base_path }}/fr">{{ site.title-fr }}</a></li>
           <!-- using French navigation -->
           {% for link in site.data.navigation.main-fr %}
             {% if link.url contains 'http' %}
