added language switcher

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -18,6 +18,13 @@
           <li id="theme-toggle" class="masthead__menu-item persist tail">
             <a><i id="theme-icon" class="fa-solid fa-sun" aria-hidden="true" title="toggle theme"></i></a>
           </li>
+          
+          <li id="lang-en" class="masthead__menu-item" style="margin-left: auto">
+            <a href="{{ base_path }}/en">English</a>
+          </li>  
+          <li id="lang-fr" class="masthead__menu-item" style="margin-left: auto">
+            <a href="{{ base_path }}/fr">Français</a>
+          </li>  
           <!-- <li id="lang-toggle" class="masthead__menu-item persist tail">
             <a><i id="lang-icon" class="fa-solid fa-language" aria-hidden="true" title="toggle theme"></i></a>
           </li> -->
