--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -176,6 +176,7 @@
   position: relative;
   min-width: 250px;
   background: var(--global-bg-color);
+  display: flex;
 
   a {
     display: block;
