--- a/_includes/masthead-fr.html
+++ b/_includes/masthead-fr.html
@@ -33,9 +33,16 @@
             <i id="lang-icon" title="Choose language" class="fa-solid fa-language" aria-hidden="true"></i>
             Langue du Site
           </a>
-          <ul id="lang-menu" style="display: none; position: absolute; top: 100%; left: auto; right: 0; background: white; list-style: none; padding: 0.5em; margin: 0; border: 1px solid #ccc; max-height: 150px; overflow-y: auto; z-index: 999;">
+          <!-- <ul id="lang-menu" style="display: none; position: absolute; top: 100%; left: auto; right: 0; background: white; list-style: none; padding: 0.5em; margin: 0; border: 1px solid #ccc; max-height: 150px; overflow-y: auto; z-index: 999;">
             <li><a href="{{ base_path }}/en">English</a></li>
             <li><a href="{{ base_path }}/fr">Français</a></li>
+          </ul> -->
+          <ul id="lang-menu" style="display: none; position: absolute; top: 100%; left: auto; right: 0; background: white; list-style: none; padding: 0.5em; margin: 0; border: 1px solid #ccc; max-height: 300px; overflow-y: auto; z-index: 999;">
+            <!-- <li><a href="{{ base_path }}/en">English</a></li> -->
+            <!-- <li><a href="{{ base_path }}/fr">Français</a></li> -->
+            {% for lang in site.languages %}
+              <li class="masthead__menu-item"><a href="{{ base_path }}/{{ lang.abbr }}">{{ lang.name }}</a></li>
+            {% endfor %}
           </ul>
         </li>
         <!-- Insert language selections -->
