--- a/_layouts/archive-fr.html
+++ b/_layouts/archive-fr.html
@@ -13,7 +13,7 @@ layout: default-fr
 {% endif %}
 
 <div id="main" role="main">
-  {% include sidebar.html %}
+  {% include sidebar-fr.html %}
 
   <div class="archive">
     {% unless page.header.overlay_color or page.header.overlay_image %}
